--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -7,11 +7,11 @@
        </tr> 
       <tr height='30'>
         <td>Produto</td>
-        <td><input type='text' formControlName='produto' class='form-control'  name='produto'></td>
+        <td><input type='text' formControlName='produto' id='produto' name='produto' class='form-control' value='xx'  name='produto'></td>
      </tr> 
      <tr height='30'>
         <td>Preço</td>
-        <td><input type='text' formControlName='preco' class='form-control'  name='preco'></td>
+        <td><input type='text' formControlName='preco' id='preco' name='preco'  class='form-control' value='xx'  name='preco'></td>
      </tr>  
   <tr>
     <td colspan='2'>
@@ -24,7 +24,7 @@
   <table width='400' align='center'>
 
   <tr>
-    <td align='center'><button (click)="cadastrar()" class="btn btn-primary" >Teste Cadastro Correto</button></td>  
+    <td align='center'><button (click)="cadastrar()" class="btn btn-primary" >Teste Cadastro</button></td>  
     
     
     
@@ -33,8 +33,14 @@
 
   </table>
 </form> 
- <br> 
-  {{msgToken}}
-</div>
+<br>
+<table width='400' align='center'>
+  <tr height='30'>
+    <td align='center' style='color:blue'><span id='msgTokenSucesso'>{{msgToken}}</span></td>
+  </tr>
+  <tr height='30'>
+      <td align='center' style='color:red'><span id='msgTokenFalha'>{{msgTokenInsussesso}}</span></td>
+    </tr>
+ </table>
 
 
